// Vitest Snapshot v1

exports[`CardTable > CardTable.vue > renders OXD CardTable > CardTable 1`] = `
"<div class=\\"oxd-table\\" role=\\"table\\">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div class=\\"oxd-table-body oxd-card-table-body\\" role=\\"rowgroup\\" data-v-074682e6=\\"\\" data-v-71ef8840=\\"\\">
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 1</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 3</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>"
`;

exports[`CardTable > CardTable.vue > should renders OXD CardTable > CardTable with card decorator 1`] = `
"<div class=\\"oxd-table\\" role=\\"table\\" rowdecorator=\\"oxd-table-decorator-card\\">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div class=\\"oxd-table-body oxd-card-table-body\\" role=\\"rowgroup\\" data-v-074682e6=\\"\\" data-v-71ef8840=\\"\\">
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 1</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 3</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>"
`;

exports[`CardTable > CardTable.vue > should renders OXD CardTable > CardTable with selector config 1`] = `
"<div class=\\"oxd-table\\" role=\\"table\\" rowdecorator=\\"oxd-table-decorator-card\\">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div class=\\"oxd-table-body oxd-card-table-body\\" role=\\"rowgroup\\" data-v-074682e6=\\"\\" data-v-71ef8840=\\"\\">
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 1</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 3</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>"
`;

exports[`CardTable > CardTable.vue > should renders OXD CardTable > CardTable without selectable 1`] = `
"<div class=\\"oxd-table\\" role=\\"table\\">
  <!-- oxd-card-table header start -->
  <!--v-if-->
  <!-- oxd-card-table header end -->
  <!-- oxd-card-table body start -->
  <div class=\\"oxd-table-body oxd-card-table-body\\" role=\\"rowgroup\\" data-v-074682e6=\\"\\" data-v-71ef8840=\\"\\">
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 1</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 2</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
    <div class=\\"oxd-table-card --mobile\\" data-v-71ef8840=\\"\\">
      <div class=\\"oxd-table-row oxd-table-row--with-border oxd-table-row--clickable\\" role=\\"row\\" data-v-4d6254cf=\\"\\" data-v-71ef8840=\\"\\">
        <!--v-if-->
        <div class=\\"card-center\\" data-v-71ef8840=\\"\\">
          <!--v-if-->
          <div class=\\"card-item card-body-slot\\" data-v-71ef8840=\\"\\">
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 1;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 1</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Data 3</div>
              </div>
            </div>
            <div class=\\"oxd-table-cell\\" role=\\"cell\\" style=\\"flex: 5;\\">
              <div class=\\"oxd-table-card-cell\\" data-v-a4505f24=\\"\\">
                <div class=\\"header\\" data-v-a4505f24=\\"\\">Column 2</div>
                <div class=\\"data\\" data-v-a4505f24=\\"\\">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div><!-- oxd-card-table body end -->
</div>"
`;
